@@ -4,6 +4,8 @@ SVN from 0.72:
         - Fixed excludes to work with a larger variety of paths (see ticket #126).
         - Added a warning for targets containing no files.
         - Fixed a hang in rebuild with unmatched braces (see ticket #129).
+        - Object files are now put in compiler-specific directories (see
+          ticket #128).
 
 0.72 from 0.71:
         - More DMD fixes - now always compiles one file at a time.
